feat: rent and return working

--- a/frontend/rental_system_web/src/app/item-card/item-card.component.html
+++ b/frontend/rental_system_web/src/app/item-card/item-card.component.html
@@ -1,9 +1,9 @@
 <div class="item-card">
-  <div class="item-image">
-      <i class="fas fa-image product-image-placeholder"></i>
-      <div class="item-badge">Featured</div>
-      <div class="item-badge popular">Popular</div>
-  </div>
+<!--  <div class="item-image">-->
+<!--      <i class="fas fa-image product-image-placeholder"></i>-->
+<!--      <div class="item-badge">Featured</div>-->
+<!--      <div class="item-badge popular">Popular</div>-->
+<!--  </div>-->
   <div class="item-content">
     <button class="favorite-btn">
       <i class="far fa-heart"></i>
